<resources>
    <string name="app_name" translatable="false">ILoveTruyen</string>
    <string name="title_home" translatable="false">Truyện tranh</string>
    <string name="title_dashboard" translatable="false">Danh sách yêu thích</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="register" translatable="false">Đăng ký</string>
    <string name="register_now" translatable="false">Chưa có tài khoản? Đăng ký ngay</string>
    <string name="login_now" translatable="false">Đã có tài khoản? Đăng nhập ngay</string>
    <string name="login" translatable="false">Đăng nhập</string>
    <string name="google" translatable="false">Google</string>
    <string name="facebook" translatable="false">FaceBoook</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
AIzaSyAEUwgDq3Lozf3A6amxx7z2l7YiTdomIzg
</string>
    <string name="wishlist">Truyện yêu thích</string>
    <string name="other">Khác</string>
    <string name="previous">Previous</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="term_and_conditions" translatable="false">Bằng cách tiếp tục, bạn đồng ý với Điều khoản Sử dụng của ILoveTruyen và xác nhận rằng bạn đã đọc hiểu Chính sách Quyền riêng tư của ILoveTruyen.</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="fullName">Họ và tên</string>
    <string name="forgot_password">Quên mật khẩu ?</string>
    <string name="lbl_forgot_password">Lấy lại mật khẩu</string>
    <string name="sendMail">Gửi mail</string>
    <string name="text_forgot_password">Vui lòng điền địa chỉ email của bạn. Bạn sẽ nhận được một email với hướng dẫn mật khẩu.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="back_button_description">Nút quay lại</string>
    <string name="see_more">Xem thêm</string>
    <string name="see_less">Ẩn bớt</string>
    <string name="text_description_comic">ViewMore TextView allows you to use a TextView by hiding the content of the text by a number of established lines and to display all the content expanding the TextView by a collapsing/expanding animation. It\'s possibile use an ellipses text or a foreground color gradient or both to hide the content.</string>
    <string name="similar_categories">Cùng thể loại:</string>
    <string name="chapter_list">Danh sách chương</string>
    <string name="see_all">Xem tất cả</string>
    <string name="updating">Đang cập nhật</string>
    <string name="processing">Đang tiến hành</string>
    <string name="inactive">Không hoạt động</string>
    <string name="finshed">Hoàn thành</string>
    <string name="list">Danh sách tải truyện tranh</string>
    <string name="histoty">Lịch sử đọc truyện tranh</string>
    <string name="ads">Loại bỏ quảng cáo</string>
    <string name="stnc">Đồng bộ đám mây</string>
    <string name="sync_detail">Đồng bộ lần cuối: Ngay bây giờ</string>
    <string name="contact">Liên hệ và hỗ trợ</string>
    <string name="sendmail">Gửi mail đến hỗ trợ</string>
    <string name="fanpage_facebook">Fanpage Facebook</string>
    <string name="share">Chia sẻ với bạn bè</string>
    <string name="rating">Đánh giá ứng dụng này</string>
    <string name="delete_res">Xóa tài khoản của bạn</string>
    <string name="delete">Xóa tài khoản</string>
    <string name="summary_of_goals_and_contact_information">I Love Truyện là một ứng dụng chia sẻ các thể loại truyện tranh được thu thập từ nhiều nguồn trên internet, với mục tiêu giúp cộng đồng thỏa mãn đam mê đọc truyện mọi lúc, mọi nơi. Nếu có vấn đề về bản quyền hoặc bất kỳ yêu cầu nào, vui lòng liên hệ với chúng tôi qua địa chỉ email:</string>
    <string name="tag"> Hãy tham gia cùng chúng tôi và \n xây dựng mối quan hệ của bạn với những người khác.</string>
    <string name="comic_history">Lịch sử truyện đã đọc</string>
    <string name="update_info">Cập nhật thông tin</string>

    <string name="enter_comment">Nhập bình luận</string>
    <string name="send_comment">Gửi</string>
    <string name="loading">Đang tải...</string>
    <string name="introduction">ILoveTruyen là một dự án chia sẻ đa dạng các thể loại truyện tranh, được thu thập từ nhiều nguồn khác nhau trên internet. Với mục tiêu mang đến những tác phẩm truyện tranh hấp dẫn và mới nhất cho cộng đồng, ILoveTruyen mong muốn lan tỏa văn hóa đọc truyện đến mọi người dân Việt Nam.</string>
    <string name="version">Phiên bản 1.0.1</string>
    <string name="description_ads">Mình chân thành cảm ơn bạn đã sử dụng ứng dụng của mình, do mình không thu phí khi sử dụng ứng dụng vì vậy sẽ có quảng cáo để duy trì máy chủ, mong bạn thông cảm! Bạn có thể xem quảng cáo để nhận phần thưởng và xóa tất cả quảng cáo trong 60 phút tiếp theo!</string>
    <string name="comment_text_goes_here">Comment text goes here.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="list_comic">Danh sách truyện</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>