<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingHorizontal="15dp">

    <include
        layout="@layout/navigation_top_back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/layout_scroll_view_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_app_bar_comic"
        tools:ignore="MissingPrefix">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="150dp"
            tools:ignore="ScrollViewSize">

            <LinearLayout
                android:id="@+id/layout_title_comic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_app_bar_comic"
                tools:ignore="MissingConstraints">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:id="@+id/detail_comic_thumb"
                        android:layout_width="130dp"
                        android:layout_height="180dp"
                        android:layout_gravity="top"
                        android:contentDescription="main image"
                        android:scaleType="centerCrop"
                        android:src="@drawable/image_place_holder"
                        tools:ignore="HardcodedText" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp">

                    <TextView
                        android:id="@+id/detail_name_comic"
                        style="@style/infomationDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Đang tải..."
                        android:textAllCaps="false"
                        android:textSize="22sp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/detail_author_name"
                        style="@style/infomationDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="Trạng thái"
                        android:text="@string/updating"
                        app:drawableStartCompat="@drawable/ic_user_detail"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/detail_likes"
                        style="@style/infomationDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="Lượt thích"
                        android:text="@string/loading"
                        app:drawableStartCompat="@drawable/ic_heart_detail"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/detail_views"
                        style="@style/infomationDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="Lượt xem"
                        android:drawableStart="@drawable/ic_eye_detail"
                        android:text="@string/loading" />

                    <TextView
                        android:id="@+id/detail_created_at"
                        style="@style/infomationDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="Thời gian"
                        android:drawableStart="@drawable/ic_clock_detail"
                        android:text="@string/loading" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_status_comic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_title_comic">

                <TextView
                    android:id="@+id/detail_processing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:drawableTop="@drawable/ic_play_detail"
                    android:drawablePadding="5dp"
                    android:text="@string/loading" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/detail_chapterLength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:drawableTop="@drawable/ic_book_detail"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="@string/loading" />
            </LinearLayout>


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/detail_keyword_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:chipSpacingHorizontal="10dp"
                app:chipSpacingVertical="-10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_status_comic"
                app:singleSelection="false"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.example.ilovetruyen.ui.comicDetail.ExpandableTextView
                    android:id="@+id/expandable_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingClass" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_description_comic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chapter_list"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_normal"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/detail_see_chapters_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:text="@string/see_all"
                        android:textAllCaps="false"
                        android:textColor="@color/primary"
                        android:textSize="14sp" />
                </LinearLayout>
                <!--Chapter list-->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/detail_chapters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--Similar comic categories -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/similar_categories"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal"
                    android:textStyle="bold" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/detail_similar_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_bottom_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/transparent"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_round"
            android:backgroundTint="@color/secondary"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="40dp"
            android:paddingVertical="10dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tiếp tục đọc"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chương 1"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>
        <ImageButton
            android:id="@+id/detail_heartBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="15dp"
            android:contentDescription="Heart button"
            android:background="@drawable/border_round"
            android:src="@drawable/ic_heart_detail"
            android:layout_marginRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/detail_saveBtn"
            app:layout_constraintTop_toTopOf="parent"
            />
        <ImageButton
            android:id="@+id/detail_saveBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/border_round"
            android:contentDescription="save your favorite"
            android:paddingHorizontal="15dp"
            android:paddingVertical="15dp"
            android:src="@drawable/ic_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
